# python-activerecord-oracle

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: .gitignore  architecture.md  testing.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix_template.md  feature_template.md  release_hotfix_template.md
.github/workflows/: changelog-check.yml  publish.yml  test.yml
changelog.d/: README.md
src/rhosocial/activerecord/backend/impl/oracle/: __init__.py  __main__.py  adapters.py  async_backend.py  async_transaction.py  backend.py  config.py  dialect.py  function_versions.py  functions.py  mixins.py  protocols.py  transaction.py
src/rhosocial/activerecord/backend/impl/oracle/cli/: __init__.py  connection.py  info.py  introspect.py  named_connection.py  named_procedure.py  named_query.py  output.py  query.py  status.py
src/rhosocial/activerecord/backend/impl/oracle/examples/: __init__.py  conftest.py
src/rhosocial/activerecord/backend/impl/oracle/examples/connection/: __init__.py  quickstart.py
src/rhosocial/activerecord/backend/impl/oracle/examples/expression/: __init__.py  basic_expressions.py
src/rhosocial/activerecord/backend/impl/oracle/examples/types/: __init__.py  basic_types.py
src/rhosocial/activerecord/backend/impl/oracle/explain/: __init__.py  types.py
src/rhosocial/activerecord/backend/impl/oracle/expression/: __init__.py  hierarchical.py  hint.py  locking.py  pivot.py
src/rhosocial/activerecord/backend/impl/oracle/functions/: __init__.py  analytic.py  conversion.py  datetime.py  json.py  null.py  spatial.py  string.py
src/rhosocial/activerecord/backend/impl/oracle/introspection/: __init__.py  introspector.py
src/rhosocial/activerecord/backend/impl/oracle/types/: __init__.py  constants.py  interval.py  rowid.py  spatial.py  vector.py  xml.py
tests/: conftest.py
tests/providers/: __init__.py  basic.py  events.py  mixins.py  query.py  registry.py  scenarios.py
tests/rhosocial/activerecord_oracle_test/feature/backend/: conftest.py  test_crud_async_backend.py  test_crud_backend.py  test_phase1_standalone.py  test_phase1_structure.py  test_phase2_adapters.py  test_phase2_types.py  test_phase3_dialect.py  test_phase3_expressions.py  test_phase5_cli.py
tests/rhosocial/activerecord_oracle_test/feature/basic/: conftest.py  test_crud.py
tests/rhosocial/activerecord_oracle_test/feature/basic/schema/: column_mapping_items.sql  comments.sql  mixed_annotation_items.sql  posts.sql  type_adapter_tests.sql  type_cases.sql  type_tests.sql  users.sql  validated_field_users.sql  validated_users.sql
