[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rhosocial-activerecord-oracle"
version = "1.0.0.dev2"
description = "Oracle backend implementation for rhosocial-activerecord, providing robust and optimized Oracle database support."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
{ name = "vistart", email = "i@vistart.me" }
]
keywords = ["activerecord", "orm", "database", "oracle", "oracledb"]
classifiers = [
"Development Status :: 3 - Alpha",
"Intended Audience :: Developers",
"License :: OSI Approved :: Apache Software License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: 3.14",
"Programming Language :: Python :: 3 :: Only",
"Framework :: Pydantic",
"Framework :: Pydantic :: 2",
"Intended Audience :: Developers",
"Topic :: Database",
"Topic :: Database :: Front-Ends",
"Topic :: Software Development :: Libraries",
"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
"oracledb>=3.4.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "towncrier>=23.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/rhosocial/python-activerecord-oracle"
Documentation = "https://docs.python-activerecord.dev.rho.social"
Repository = "https://github.com/rhosocial/python-activerecord-oracle.git"
Issues = "https://github.com/rhosocial/python-activerecord-oracle/issues"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = [
    "tests",
]
markers = [
    "requires_capability: marks tests requiring specific backend capabilities",
    "requires_protocol: marks tests requiring specific backend protocol support",
    "requires_inner_join: marks tests requiring INNER JOIN support",
]

[tool.coverage.run]
source = ["rhosocial.activerecord.backend.impl.oracle"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["E", "F", "B"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.towncrier]
package = "rhosocial.activerecord.backend.impl.oracle"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## [{version}] - {project_date}"
template = "changelog.d/template.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/rhosocial/python-activerecord-oracle/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "Performance"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true
